syntax = "proto3";
package pb;

message QueryRequest{
    string name = 1;
}

message QueryResponse{
    string location = 1;
    string err = 2;
}

message PostRequest{
    string name = 1;
    string location = 2;
}

message PostResponse{
    int64 result = 1; // 0, succeed; other: failed
    string message = 2;
}


service Location{
    // query someone's location by name
    rpc Query(QueryRequest) returns (QueryResponse) {}

    // post a new location
    rpc Post(PostRequest) returns (PostResponse) {}
}

